# rustlits

actix/: .env  Cargo.toml
actix/src/: main.rs
axum/: Cargo.toml
axum-example/files/css/: index.css
axum-example/src/: main.rs  views.rs
builder-pattern/: Cargo.toml
builder-pattern/src/: lib.rs  main.rs
diesel/: Cargo.toml
diesel-example/: Cargo.toml
diesel-example/src/: main.rs  models.rs  schema.rs
diesel/migrations/2024-03-06-131340_accounts/: up.sql
diesel/src/: lib.rs  main.rs  models.rs
maud/: Cargo.toml
maud-example/src/: main.rs
maud/src/: main.rs  views.rs
sqlx/: .gitignore  Cargo.toml  schema.sql
sqlx/migrations/: 20240311160118_init.down.sql  20240311160118_init.up.sql
sqlx/src/: main.rs
