[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "postgres", "macros"], default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"], default-features = false }
